# tgbot

./: .editorconfig  Dockerfile  README.md  bot.py  pyproject.toml  requirements.txt  settings.py  setup.cfg
.github/workflows/: docker-image.yml
bot/: __main__.py  api_client.py  config.py
bot/clients/: api.py  generations.py  schema.py  users.py
bot/utils/: handlers.py  job.py  menu.py  utils.py
